moved code back in main folder otherwise you need here() to reference data in another folder

--- a/03_import.qmd
+++ b/03_import.qmd
@@ -2,6 +2,7 @@
 title: "3: Importing data"
 subtitle: "Introduction to R for health data"
 author: Andrea Mazzella [(GitHub)](https://github.com/andreamazzella)
+editor: visual
 ---
 
 ------------------------------------------------------------------------
